examples/test/testpolicy17073.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17073
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key36: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value38
          key8: value11
          key7: value26
      podSelector:
        matchLabels:
          key18: value1
          key7: value3
